# rust-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
benches/: bench_documents.rs  bench_vectors.rs
examples/: basic.rs  vector_search.rs
src/: client.rs  error.rs  ffi.rs  lib.rs  results.rs  vector.rs
tests/: integration_test.rs
