[package]
name = "keradb-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["KeraDB <hello@keradb.io>"]
description = "Rust SDK for KeraDB - a lightweight, embedded NoSQL document database with vector search"
license = "MIT"
repository = "https://github.com/KeraDB/rust-sdk"
homepage = "https://keradb.github.io"
documentation = "https://docs.rs/keradb-sdk"
readme = "README.md"
keywords = ["database", "nosql", "embedded", "vector", "document"]
categories = ["database-implementations", "api-bindings"]
build = "build.rs"
exclude = [
    "tests/*",
    "benches/*",
    ".benchmarks/*",
    "examples/*.ndb",
    "target/*",
]

[package.metadata.docs.rs]
# docs.rs builds on Linux; the native lib won't be present, so disable
# features that would require it and allow missing docs to avoid build failure.
features = []
no-default-features = true

[lib]
name = "keradb_sdk"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dynamic library loading (C FFI)
libloading = ">=0.8, <1.0"

# Error handling
thiserror = "1.0"

# Thread safety
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[features]
# Enable integration/benchmark tests that require the native keradb shared library.
# Run with: cargo test --features integration
#           cargo bench --features integration
integration = []

[[bench]]
name = "bench_documents"
harness = false

[[bench]]
name = "bench_vectors"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "vector_search"
path = "examples/vector_search.rs"
